--- a/Missions_to_Mars/Templates/index.html
+++ b/Missions_to_Mars/Templates/index.html
@@ -39,26 +39,26 @@
         
         <div>
           <br>
-          <h1>Mars Hemispheres</h1>
-        </div>
+          <h2>Mars Hemispheres</h2>
+
+          <div class="row">
+            {% for hemi in mars_data.hemispheres %}
+            <div class="col col-6">
+                <div class="boxmargin">
+                    <img src="{{ hemi.img_url }}" alt="" width ="300">
+                    <p>{{ hemi.title}}</p>
+                </div>
+            </div>
+            {% endfor %}            
+          </div>
+
         </div>
       </div>
     </div>
-  </div>
   
-  <div class="row">
-
-    {% for hemi in mars_data.Hemispheres%}
-    <div class="cold-md-3">
-      <h3>{{ hemi.title }}</h3>
-      <img src="{{ hemi.img_url }}" alt="">
-    </div>
-    {% endfor %}
-
-
   </div>
 
-
+</div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
